0.6.2 (2011-10-12)
    - Fixed Blueprint/Module resolving in output path.

0.6.1 (2011-10-10)
    - Building in 0.6 was very much broken (thanks Oliver Tonnhofer).
    - A custom "static_folder" for a Flask app or Blueprint/Module is now
      supported.

0.6 (2011-10-03)
    - Support webassets 0.6.
    - Fixed use of wrong Flask app in some cases.
    - Fixed init_app() usage (Oliver Tonnhofer)
    - Python 2.5 compatibility (Ron DuPlain)

0.5.1 (2011-08-12)
    - New version numbering scheme. The major and minor
      version numbers will now follow along with the version
      of webassets the Flask-Assets release was written
      against, and is guaranteed to be compatible with.
    - Support for Blueprints (Flask 0.7).
    - Fixed usage for incorrect request context during URL
      generation (thank you, julen).

0.2.2 (2011-05-27)
    - Really fix the ManageAssets command.

0.2.1 (2011-04-28)
    - Fixed the ManageAssets command to work with the current
      Flask-Script version.

0.2 (2011-03-30)
    - Support for init_app() protocol, multiple applications.
    - Integrate with Flask-Script, provide management command.
    - Properly support Flask modules, with the ability to reference
      the module's static files in bundles (Olivier Poitrey).

0.1 (2010-09-24)
    Initial release.