@@ -9,22 +9,6 @@ deps =
     flask-script==0.3.1
     webassets==0.6
 
-[testenv:py27_flask07]
-basepython = python2.7
-deps = 
-    nose==1.0.0
-    flask==0.7
-    flask-script==0.3.1
-    webassets==0.6
-
-[testenv:py27_flask06]
-basepython = python2.7
-deps = 
-    nose==1.0.0
-    flask==0.6
-    flask-script==0.3.1
-    webassets==0.6
-
 [testenv:py26_flask08]
 basepython = python2.6
 deps = 
@@ -33,43 +17,11 @@ deps =
     flask-script==0.3.1
     webassets==0.6
 
-[testenv:py26_flask07]
-basepython = python2.6
-deps = 
-    nose==1.0.0
-    flask==0.7
-    flask-script==0.3.1
-    webassets==0.6
-
-[testenv:py26_flask06]
-basepython = python2.6
-deps = 
-    nose==1.0.0
-    flask==0.6
-    flask-script==0.3.1
-    webassets==0.6
-
 [testenv:py25_flask08]
 basepython = python2.5
 deps = 
     nose==1.0.0
     flask==0.8
-    flask-script==0.3.1
-    webassets==0.6
-
-[testenv:py25_flask07]
-basepython = python2.5
-deps = 
-    nose==1.0.0
-    flask==0.7.2
-    flask-script==0.3.1
-    webassets==0.6
-
-[testenv:py25_flask06]
-basepython = python2.5
-deps = 
-    nose==1.0.0
-    flask==0.6
     flask-script==0.3.1
     webassets==0.6
 
